--- a/client/src/components/Header/userSearchBox/UserSearchBox.css
+++ b/client/src/components/Header/userSearchBox/UserSearchBox.css
@@ -81,7 +81,7 @@
 .userSearchBox_dropdownProfiles{
     background-color: white;
     width: 100%;
-    padding: 12px 16px;
+    padding: 12px 16px 5px;
     max-height: 310px;
     overflow-y: auto;
 }
