--- a/client/src/components/Perfil/PerfilInformation/changeAvatarImg/ChangeAvatarImg.css
+++ b/client/src/components/Perfil/PerfilInformation/changeAvatarImg/ChangeAvatarImg.css
@@ -1,6 +1,6 @@
 .changeAvatarImg {
   position: fixed;
-  width: 100vw;
+  width: 120vw;
   height: 100vh;
   top: 0;
   left: 0;
